--- a/templates/league/index.html.twig
+++ b/templates/league/index.html.twig
@@ -6,7 +6,7 @@
             <div class="col-xs-12 col-md-3">
                 <div class="card mb-3">
                     <div class="card-header text-center">
-                        <h4>Stwórz nową lige</h4>
+                        <h4>Stwórz nową ligę</h4>
                     </div>
                     <div class="card-body">
                         {{ form_start(form) }}
@@ -73,7 +73,7 @@
             <div class="col-xs-12 col-md-6">
                 <div class="card mb-3">
                     <div class="card-header text-center">
-                        <h4>Ligi do których należysz</h4>
+                        <h4>Ligi, do których należysz</h4>
                     </div>
                     <div class="card-body">
                         <table class="table">
