--- a/src/Domain/templates/driver/edit.html.twig
+++ b/src/Domain/templates/driver/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Driver</h1>
 
-    {{ include('driver/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('@domain/driver/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('driver_index') }}">back to list</a>
 
-    {{ include('driver/_delete_form.html.twig') }}
+    {{ include('@domain/driver/_delete_form.html.twig') }}
 {% endblock %}
