--- a/src/Domain/templates/driver/new.html.twig
+++ b/src/Domain/templates/driver/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new Driver</h1>
 
-    {{ include('driver/_form.html.twig') }}
+    {{ include('@domain/driver/_form.html.twig') }}
 
     <a href="{{ path('driver_index') }}">back to list</a>
 {% endblock %}
