--- a/src/Domain/templates/driver/show.html.twig
+++ b/src/Domain/templates/driver/show.html.twig
@@ -35,7 +35,7 @@
 
                     <a class="btn btn-outline-success" href="{{ path('driver_edit', {'id': driver.id}) }}">edit</a>
 
-                    {{ include('driver/_delete_form.html.twig') }}
+                    {{ include('@domain/driver/_delete_form.html.twig') }}
                     </div>
                 </div>
             </div>
