--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}F1 Simulator{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-            <script src="https://kit.fontawesome.com/0012002a90.js" crossorigin="anonymous"></script>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">            <script src="https://kit.fontawesome.com/0012002a90.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
         {% endblock %}
         <meta name="Description" content="Simulate your f1 season as one of the drivers against computer, or compete against players.">
