--- a/src/Computer/Templates/index.html.twig
+++ b/src/Computer/Templates/index.html.twig
@@ -15,7 +15,7 @@
         <h3 class="text-justify text-center mb-5">#F1Simulator to strona pozwalająca na symulacje sezonu formuły 1</h3>
         <div class="row">
             <div class="col-xs-12 col-md-3">
-                <div class="card">
+                <div class="card custom-card">
                     {% if currentDriverSeason is same as(null) %}
                         <div class="card-header">
                             <h4>Wybierz zespół i rozpocznij sezon</h4>
@@ -37,7 +37,7 @@
                             <span>Rozegrane wyścigi: {{ currentDriverSeason.season.races|length }} / {{ currentDriverSeason.numberOfRaces }}</span><br>
                             <span>Zdobyte punkty: {{ currentDriverSeason.driverPoints }} </span><br>
 
-                            <hr>
+                            <hr class="light-hr">
                             <div class="driver-medals mt-2">
                                 <div class="row">
                                     <div class="col gold-medal mb-1">
@@ -57,7 +57,7 @@
                         </div>
                     {% endif %}
                 </div>
-                <div class="card mt-5 mb-2">
+                <div class="card custom-card mt-5 mb-2">
                     {% if currentDriverSeason and currentDriverSeason.currentTrack %}
                         <div class="card-header"> 
                             <h4>Kolejny wyścig</h4> 
@@ -71,17 +71,17 @@
                             <h4>Koniec sezonu</h4> 
                         </div> 
                         <div class="card-body flow-text"> 
-                            <a href="{{ path('game_season_end') }}" class="btn btn-outline-info">Zakończ sezon</a>
+                            <a href="{{ path('game_season_end') }}" class="btn btn-outline-info-darker">Zakończ sezon</a>
                         </div>
                     {% endif %}
                 </div>
             </div>
             <div class="col-xs-12 col-md-9">
-                <div class="row">
+                <div class="row position-relative">
                     <div class="col-xs-12 col-md-8">
                         <div class="middle-section-menu mb-3">
                             <div>
-                                <a class="custom-dropdown" data-target="div-for-race-results-anchors">#Wyniki Wyścigów <i class="fas fa-arrow-down ml-1" data-destiny="races"></i></a>
+                                <a class="custom-dropdown" data-target="div-for-race-results-anchors">#Wyniki Wyścigów <i class="fas fa-arrow-down ms-1" data-destiny="races"></i></a>
                                 <div class="div-for-classification-results-anchors" id="div-for-race-results-anchors">
                                     {% if currentDriverSeason and currentDriverSeason.season.races|length != 0 %}
                                         {% for race in currentDriverSeason.season.races %}
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                             <div>
-                                <a class="custom-dropdown" data-target="div-for-qualifications-results-anchors">#Wyniki kwalifikacji <i class="fas fa-arrow-down ml-1" data-destiny="qualifications"></i></a>
+                                <a class="custom-dropdown" data-target="div-for-qualifications-results-anchors">#Wyniki kwalifikacji <i class="fas fa-arrow-down ms-1" data-destiny="qualifications"></i></a>
                                 <div class="div-for-classification-results-anchors" id="div-for-qualifications-results-anchors">
                                     {% if currentDriverSeason and currentDriverSeason.season.races|length != 0 %}
                                         {% for race in currentDriverSeason.season.races %}
@@ -109,10 +109,10 @@
                                 </div>
                             </div>
                             <div>
-                                <a href="{{ path('app_index') }}">#Klasyfikacja kierowców</a>
+                                <a class="hover-underline" href="{{ path('app_index') }}">#Klasyfikacja kierowców</a>
                             </div>
                         </div>
-                        <div class="card mb-2">
+                        <div class="card custom-card mb-2">
                             {% if classificationType == enum('Computer\\Service\\ClassificationType').DRIVERS %}
                                 <div class="card-header">
                                     <h4 class="text-center">Klasyfikacja kierowców</h4>
@@ -144,7 +144,7 @@
                             </div>
                             <div class="card-body">
                                <div class="table-responsive">
-                                    <table class="table">
+                                    <table class="table spacier-table">
                                         <thead>
                                             <tr>
                                                 <th>Miejsce</th>
