--- a/src/Computer/Templates/season_results/_qualifications_classification.html.twig
+++ b/src/Computer/Templates/season_results/_qualifications_classification.html.twig
@@ -1,6 +1,6 @@
 <div>
     <div class="table-responsive">
-        <table class="table">
+        <table class="table spacier-table">
             <thead>
                 <tr>
                     <th>Miejsce</th>
