--- a/src/Multiplayer/Templates/league/index.html.twig
+++ b/src/Multiplayer/Templates/league/index.html.twig
@@ -4,20 +4,20 @@
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-xs-12 col-md-3">
-                <div class="card mb-3">
+                <div class="card custom-card mb-3">
                     <div class="card-header text-center">
                         <h4>Stwórz nową ligę</h4>
                     </div>
                     <div class="card-body">
                         {{ form_start(form) }}
-                            <div class="form-group">
+                            <div class="form-group mb-2">
                                 {{ form_label(form.name, 'Nazwa') }}
-                                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_widget(form.name, {'attr': {'class': 'form-control mt-1'}}) }}
                                 {{ form_errors(form.name) }}
                             </div>
-                            <div class="form-group">
+                            <div class="form-group mb-2">
                                 {{ form_label(form.max_players, 'Liczba graczy(2-20)') }}
-                                {{ form_widget(form.max_players, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_widget(form.max_players, {'attr': {'class': 'form-control mt-1'}}) }}
                                 {{ form_errors(form.max_players) }}
                             </div>
                             <button type="submit" class="btn btn-success">Stwórz</button>
@@ -26,34 +26,36 @@
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card custom-card mb-3">
                     <div class="card-header text-center">
                         <h4>Twoje ligi</h4>
                     </div>
                     <div class="card-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Nazwa</th>
-                                    <th>Klucz Do Ligi</th>
-                                    <th>Liczba graczy(max)</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for league in userLeagues %}
+                        <div class="table-responsive">
+                            <table class="table spacier-table">
+                                <thead>
                                     <tr>
-                                        <td>{{ league.getName() }}</td>
-                                        <td>{{ league.getSecret() }}</td>
-                                        <td class="text-center">{{ league.getMaxPlayers() }}</td>
+                                        <th>Nazwa</th>
+                                        <th>Klucz Do Ligi</th>
+                                        <th>Liczba graczy(max)</th>
                                     </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                    {% for league in userLeagues %}
+                                        <tr>
+                                            <td>{{ league.getName() }}</td>
+                                            <td>{{ league.getSecret() }}</td>
+                                            <td class="text-center">{{ league.getMaxPlayers() }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-md-3">
-                <div class="card mb-3">
+                <div class="card custom-card mb-3">
                     <div class="card-header text-center">
                         <h4>Dołącz do ligi</h4>
                     </div>
@@ -61,9 +63,9 @@
                         <form method="POST" action="{{ path('league_join') }}">
                             <div class="form-group">
                                 <label for="league-key">Klucz do ligi</label>
-                                <input type="text" class="form-control" id="league-key" name="league-secret">
+                                <input type="text" class="form-control mt-1" id="league-key" name="league-secret">
                             </div>
-                            <button type="submit" class="btn btn-success">Dołącz</button>
+                            <button type="submit" class="btn btn-success mt-2">Dołącz</button>
                         </form>
                     </div>
                 </div>
@@ -71,53 +73,55 @@
         </div>
         <div class="row mt-2">
             <div class="col-xs-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card custom-card mb-3">
                     <div class="card-header text-center">
                         <h4>Ligi, do których należysz</h4>
                     </div>
                     <div class="card-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Nazwa</th>
-                                    <th>Wyścigi</th>
-                                    <th>Gracze</th>
-                                    <th>Wyświetl</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for league in leagues %}
+                        <div class="table-responsive">
+                            <table class="table spacier-table">
+                                <thead>
                                     <tr>
-                                        <td>{{ league.getName() }}</td>
-                                        <td>
-                                            {% if league.getRaces().count() != 0 %}
-                                                {% for key, race in league.getRaces() %}
-                                                    {% if key != league.getRaces()|keys|last %}
-                                                        {{ tracks[race.getTrackId].name }},
+                                        <th>Nazwa</th>
+                                        <th>Wyścigi</th>
+                                        <th>Gracze</th>
+                                        <th>Wyświetl</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for league in leagues %}
+                                        <tr>
+                                            <td>{{ league.getName() }}</td>
+                                            <td>
+                                                {% if league.getRaces().count() != 0 %}
+                                                    {% for key, race in league.getRaces() %}
+                                                        {% if key != league.getRaces()|keys|last %}
+                                                            {{ tracks[race.getTrackId].name }},
+                                                        {% else %}
+                                                            {{ tracks[race.getTrackId].name }}
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                {% else %}
+                                                    Żaden wyścig nie został jeszcze rozegrany
+                                                {% endif %}
+                                            </td>
+                                            <td class="text-center">
+                                                {% for key, player in league.getPlayers() %}
+                                                    {% if key != league.getPlayers()|keys|last %}
+                                                        {{ player.getUser().getUsername() }},
                                                     {% else %}
-                                                        {{ tracks[race.getTrackId].name }}
+                                                        {{ player.getUser().getUsername() }}
                                                     {% endif %}
                                                 {% endfor %}
-                                            {% else %}
-                                                Żaden wyścig nie został jeszcze rozegrany
-                                            {% endif %}
-                                        </td>
-                                        <td class="text-center">
-                                            {% for key, player in league.getPlayers() %}
-                                                {% if key != league.getPlayers()|keys|last %}
-                                                    {{ player.getUser().getUsername() }},
-                                                {% else %}
-                                                    {{ player.getUser().getUsername() }}
-                                                {% endif %}
-                                            {% endfor %}
-                                        </td>
-                                        <td>
-                                            <a href="{{ path('multiplayer_show_season', {'id' : league.getId() }) }}" class="btn btn-warning">Wyświetl</a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+                                            </td>
+                                            <td>
+                                                <a href="{{ path('multiplayer_show_season', {'id' : league.getId() }) }}" class="btn btn-warning">Wyświetl</a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
