--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -62,7 +62,7 @@
         {% block body %}{% endblock %}
 
         {% block javascripts %}
-        
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         {% endblock %}
     </body>
 </html>
