--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,12 +24,16 @@
                     <ul class="navbar-nav">
                         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                             <li class="nav-item"><a class="nav-link text-white" href="{{ path('multiplayer_index') }}">Multiplayer</a></li>
-                            <li class="nav-item"><a class="nav-link text-white" href="">Hello:  {{ app.user.username }} </a></li>
+                            <li class="nav-item"><a class="nav-link text-white" href="">Hello: {{ app.user.username }} </a></li>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="nav-item"><a class="nav-link text-white" href="{{ path('admin_dashboard') }}">Panel Administratora</a></li>
+                            {% endif %}
                             <li class="nav-item"><a class="nav-link text-white" href="{{ path('app_logout') }}">Logout</a></li>
                         {% else %}
                             <li class="nav-item"><a class="nav-link text-white" href="{{ path('app_login') }}">Logowanie</a></li>
                             <li class="nav-item"><a class="nav-link text-white" href="{{ path('app_register') }}">Rejestracja</a></li>
                         {% endif %}
+
                     </ul>
                 </div>
             </div>
